<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context="com.trong.clas.screen.importwallet.ImportPrvKeyFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/private_key_star"
        android:textSize="@dimen/normal_text_size1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/black"
        android:id="@+id/import_private_key_edt"
        android:textSize="@dimen/normal_text_size1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="@color/blue_300"
        android:textColor="@color/white"
        android:text="@string/import_text"
        android:id="@+id/import_private_key_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/field_require"
        android:textSize="@dimen/normal_text_size1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
