<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_5sdp"
    android:paddingRight="@dimen/_5sdp"
    tools:context="com.trong.clas.screen.start.DetailTxActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textColor="@color/blue_300"
            android:textSize="@dimen/normal_text_size3"
            android:text="@string/detail_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_tx_hash"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/tx_hash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_tx_hash"
                android:id="@+id/detail_tx_tx_hash"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_tx_receipt_status"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/tx_receipt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_tx_receipt_status"
                android:id="@+id/detail_tx_tx_receipt_status"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_time_stamp"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_time_stamp"
                android:id="@+id/detail_tx_time_stamp"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_from"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_from"
                android:id="@+id/detail_tx_from"
                android:textColor="@color/blue_300"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_to"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_to"
                android:id="@+id/detail_tx_to"
                android:textColor="@color/blue_300"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_nonce"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/nonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_nonce"
                android:id="@+id/detail_tx_nonce"
                android:textColor="@color/blue_300"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_text_input_data"
                android:textSize="@dimen/small_text_size3"
                android:textColor="@color/black"
                android:text="@string/input_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/tv_text_input_data"
                android:id="@+id/detail_tx_input_data"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
