<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trong.clas.screen.start.StartActivity">
    <LinearLayout
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/ll_create_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textColor="@color/white"
            android:background="@color/blue_300"
            android:text="@string/create_wallet"
            android:id="@+id/btn_create_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/white"
            android:background="@color/blue_300"
            android:text="@string/import_wallet"
            android:id="@+id/btn_import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v4.widget.DrawerLayout
        android:fitsSystemWindows="false"
        android:id="@+id/drawer_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.Toolbar
                    android:gravity="center_vertical"
                    android:id="@+id/start_screen_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize">
                </android.support.v7.widget.Toolbar>
                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp">
                    <ImageView
                        android:layout_weight="3"
                        android:src="@drawable/ic_portrait_blue_500_36dp"
                        android:padding="@dimen/account_image_padding"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:padding="@dimen/text_margin"
                                android:textColor="#000"
                                android:text="account"
                                android:textSize="@dimen/normal_text_size2"
                                android:id="@+id/tv_account"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:layout_marginBottom="@dimen/text_margin"
                                android:layout_marginRight="@dimen/text_margin"
                                android:layout_marginLeft="@dimen/text_margin"
                                android:textColor="#000"
                                android:text="address"
                                android:textSize="@dimen/normal_text_size1"
                                android:id="@+id/tv_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:text="0.0 ETH"
                        android:textColor="#000"
                        android:textSize="@dimen/normal_text_size1"
                        android:layout_margin="@dimen/text_margin"
                        android:id="@+id/tv_balance"
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:layout_toLeftOf="@id/btn_send_tx"
                            android:text="@string/buy"
                            android:id="@+id/btn_buy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <Button
                            android:layout_alignParentRight="true"
                            android:text="@string/send"
                            android:id="@+id/btn_send_tx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:layout_marginRight="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:background="@color/bg_gray"
                        android:id="@+id/ll_tab_sent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:text="@string/sent"
                            android:textColor="#000"
                            android:textSize="@dimen/normal_text_size2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:layout_marginRight="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:id="@+id/ll_tab_receive"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:text="@string/received"
                            android:textColor="#000"
                            android:textSize="@dimen/normal_text_size2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:padding="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_1sdp"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:background="@color/bg_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout

                        android:orientation="vertical"
                        android:background="#fff"
                        android:layout_margin="@dimen/_1sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rcv_tx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                        <TextView
                            android:id="@+id/start_screen_tv_no_tx_found"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="@string/no_tx_found"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_gravity="start"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_add_blue_a100_24dp"
                        android:id="@+id/iv_add_wallet"
                        android:layout_width="@dimen/ic_add_wallet_size"
                        android:layout_height="@dimen/ic_add_wallet_size" />
                </RelativeLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rcv_list_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </ScrollView>
            </LinearLayout>
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size1"
        android:text="@string/error_happened"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/start_screen_tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>